testdata/baselines/reference/submodule/compiler/namespaceMergedWithFunctionWithOverloadsUsage.errors.txt
index.ts(3,3): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type 'number' is not assignable to parameter of type 'Function'.


==== index.ts (1 errors) ====
    import X = require("./file");
    
    X(0); // shouldn't cause a crash
      ~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Argument of type 'number' is not assignable to parameter of type 'Function'.
!!! related TS2771 file.d.ts:8:18: The last overload is declared here.
==== file.d.ts (0 errors) ====
    declare namespace Foo {
        interface Whatever {
            prop: any;
        }
    }
    
    declare function Foo(opts?: Foo.Whatever): void;
    declare function Foo(cb: Function, opts?: Foo.Whatever): void;
    
    export = Foo;